Sonarlint (#142)
* Added sonarlint

* Added sonarlint